--- a/css/prepros-6.config
+++ b/css/prepros-6.config
@@ -1,5 +1,5 @@
 {
-  "name": "images",
+  "name": "dragdroptest",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [],
@@ -60,7 +60,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7893,
+    "port": 7895,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
